Various dep upgrades including CAS